Add README and improve schedule manager

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <button id="exportBtn" class="action-btn">
                     <i class="fas fa-file-export"></i> Exportar
                 </button>
+                <button id="importBtn" class="action-btn">
+                    <i class="fas fa-file-import"></i> Importar
+                </button>
+                <input type="file" id="importFile" accept="application/json" style="display:none">
             </div>
         </header>
         
